# Cardiac_Arrythmia_detection-ECG-_from_DeepLearning

./: ECG_data_exploration.ipynb  Ensemble.ipynb  dataset.py  evaluate_model.py  train_model.py
.ipynb_checkpoints/: ECG_data_exploration-checkpoint.ipynb  Ensemble-checkpoint.ipynb  attention-checkpoint.py  helper_code-checkpoint.py  my_helper_code-checkpoint.py  pool-checkpoint.py  test_model-checkpoint.py  train_model-checkpoint.py
ECG data analysis/: .gitignore  ECG_data.m  LICENSE  README.md  bwr.py  example.py  pyproject.toml
dataset/: datset.py
models/: MHA_resnet.py  Untitled.ipynb  attention.py  basic_conv1d.py  classifier_pool.py  dense_bda.py  dense_cam.py  resnet.py  rnn_module.py  xresnet1d.py  xresnet_bda.py
models/.ipynb_checkpoints/: MHA_resnet-checkpoint.py  dense_mha-checkpoint.py  dense_rnn-checkpoint.py  densenet-checkpoint.py  inception-checkpoint.py  pool-checkpoint.py  resnet_bda-checkpoint.py  resnet_rnn-checkpoint.py  rnn_module-checkpoint.py  xresnet101_rnn-checkpoint.py  xresnet_bda-checkpoint.py
utils/: evaluate_model.py
